--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "eslint-config-airbnb": "^19.0.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.10.0"
   },
   "devDependencies": {
     "eslint": "^8.34.0",
