--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "eslint-config-airbnb": "^19.0.4",
     "express": "^4.18.2",
     "mongoose": "^6.10.0"
